cmake_minimum_required(VERSION 3.20)

# Qt Widgets for Technical Applications
project("Qwt" VERSION "6.2.0" LANGUAGES CXX)

set(QWT_VER_MAJ ${PROJECT_VERSION_MAJOR})
set(QWT_VER_MIN ${PROJECT_VERSION_MINOR})
set(QWT_VER_PAT ${PROJECT_VERSION_PATCH})
set(QWT_VERSION ${PROJECT_VERSION})

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set_property(DIRECTORY APPEND PROPERTY ADDITIONAL_CLEAN_FILES bin lib)

option(ENABLE_TESTS "Enable tests" OFF)
option(ENABLE_EXAMPLES "Enable examples" OFF)
option(ENABLE_DESIGNER "Enable designer" OFF)
option(ENABLE_OPENGL "Enable OpenGL" OFF)
option(ENABLE_SVG "Enable SVG" OFF)
option(ENABLE_PLOT "Enable plot" ON)
option(ENABLE_POLAR "Enable polar" ON)
if(WIN32)
  option(ENABLE_DLL "Enable DLL" OFF)
endif()
option(ENABLE_WIDGETS "Enable widgets" ON)

set(LIBNAME qwt)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CXXFLAGS} -Wall -Wextra -Wpedantic -Wcast-qual -Wcast-align -Wredundant-decls -Wformat -Wshadow -Woverloaded-virtual -fno-math-errno -funsafe-math-optimizations -Wsuggest-override")

if(ENABLE_TESTS)
  message(STATUS "${PROJECT_NAME} tests enabled")
  enable_testing(TRUE)
  add_subdirectory(tests)
else()
  message(STATUS "${PROJECT_NAME} tests disabled")
endif()

if(ENABLE_EXAMPLES)
  message(STATUS "${PROJECT_NAME} examples enabled")
else()
  message(STATUS "${PROJECT_NAME} examples disabled")
endif()

if(WIN32)
  if(ENABLE_DLL)
    message(STATUS "${PROJECT_NAME} DLL enabled")
  else()
    message(STATUS "${PROJECT_NAME} DLL disabled")
  endif()
endif()

if(ENABLE_OPENGL)
  message(STATUS "${PROJECT_NAME} OpenGL enabled")
else()
  message(STATUS "${PROJECT_NAME} OpenGL disabled")
endif()

if(ENABLE_SVG)
  message(STATUS "${PROJECT_NAME} SVG enabled")
else()
  message(STATUS "${PROJECT_NAME} SVG disabled")
endif()

if(ENABLE_POLAR)
  message(STATUS "${PROJECT_NAME} polar plot enabled")
  set(ENABLE_PLOT ON)
else()
  message(STATUS "${PROJECT_NAME} polar plot disabled")
endif()

if(ENABLE_PLOT)
  message(STATUS "${PROJECT_NAME} plot enabled")
else()
  message(STATUS "${PROJECT_NAME} plot disabled")
endif()

if(ENABLE_WIDGETS)
  message(STATUS "${PROJECT_NAME} widgets enabled")
else()
  message(STATUS "${PROJECT_NAME} widgets disabled")
endif()

add_subdirectory(src)
